--- a/templates/round6.html
+++ b/templates/round6.html
@@ -31,8 +31,23 @@
     </div>
 
         <!-- Modal content -->      
-    <h2>Email Clue here</h2> 
-    <a id="riddle" href="#">Riddle link here</a>
+
+
+        <p style="margin: 10em 15em 0em 15em; font: 1.2em sans-serif;">"I can as well be hanged as tell the manner of it. 
+        It was mere foolery. I did not mark it. I saw Mark Antony offer him a crown. . .
+         and, as I told you, he put it by once. . . And then he offered it the <b>third</b> time. 
+         He put it the <b>third</b> time by. And still, as he refused it, the rabblement hooted. . .
+          and uttered such a deal of stinking breath because <b>Caesar</b> refused the crown that
+           it had almost choked <b>Caesar</b>"</p> 
+
+
+           <h1>"r mxolxv fdhvdu, wkrx duw pljkwb bhw"</h1>
+
+        
+
+
+    
+    
     <form action="" , method="POST">
         <div class="answer">
         {{ form.hidden_tag() }}                
