--- a/templates/scavenger.html
+++ b/templates/scavenger.html
@@ -32,12 +32,11 @@
         <!-- Modal content -->      
 
 
+    <img src="{{url_for('static',filename='Images/key8.gif')}}" style="margin-top: 8em;" alt="kwy8">
 
 
-
-
-    <h2>He typed "12312 1" in 1990</h2> 
-    <p>nokia hands</p>
+    <h2 style="margin-top: 2em;" >John Texted "444 0 2 6 0 999 666 88" in 1990</h2> 
+    
   
 
 
