--- a/static/css/html.css
+++ b/static/css/html.css
@@ -1,52 +1,650 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  background: black;
+  font-family: "Oswald", sans-serif;
+  font-style: italic;
 }
 
-/* The Modal (background) */
-.modal {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 1;
-  /* Sit on top */
-  padding-top: 100px;
-  /* Location of the box */
-  left: 0;
+.container {
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  top: 40%;
+  left: 50%;
+}
+
+.glitch, .glow {
+  color: #dfbfbf;
+  position: relative;
+  font-size: 9vw;
+  -webkit-animation: glitch 5s 5s infinite;
+          animation: glitch 5s 5s infinite;
+}
+
+.glitch::before, .glow::before {
+  content: attr(data-text);
+  position: absolute;
+  left: -2px;
+  text-shadow: -5px 0 magenta;
+  background: black;
+  overflow: hidden;
   top: 0;
+  -webkit-animation: noise-1 3s linear infinite alternate-reverse, glitch 5s 5.05s infinite;
+          animation: noise-1 3s linear infinite alternate-reverse, glitch 5s 5.05s infinite;
+}
+
+.glitch::after, .glow::after {
+  content: attr(data-text);
+  position: absolute;
+  left: 2px;
+  text-shadow: -5px 0 lightgreen;
+  background: black;
+  overflow: hidden;
+  top: 0;
+  -webkit-animation: noise-2 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
+          animation: noise-2 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
+}
+
+@-webkit-keyframes glitch {
+  1% {
+    -webkit-transform: rotateX(10deg) skewX(90deg);
+            transform: rotateX(10deg) skewX(90deg);
+  }
+  2% {
+    -webkit-transform: rotateX(0deg) skewX(0deg);
+            transform: rotateX(0deg) skewX(0deg);
+  }
+}
+
+@keyframes glitch {
+  1% {
+    -webkit-transform: rotateX(10deg) skewX(90deg);
+            transform: rotateX(10deg) skewX(90deg);
+  }
+  2% {
+    -webkit-transform: rotateX(0deg) skewX(0deg);
+            transform: rotateX(0deg) skewX(0deg);
+  }
+}
+
+@-webkit-keyframes noise-1 {
+  3.33333% {
+    -webkit-clip-path: inset(62px 0 14px 0);
+            clip-path: inset(62px 0 14px 0);
+  }
+  6.66667% {
+    -webkit-clip-path: inset(27px 0 19px 0);
+            clip-path: inset(27px 0 19px 0);
+  }
+  10% {
+    -webkit-clip-path: inset(62px 0 31px 0);
+            clip-path: inset(62px 0 31px 0);
+  }
+  13.33333% {
+    -webkit-clip-path: inset(95px 0 3px 0);
+            clip-path: inset(95px 0 3px 0);
+  }
+  16.66667% {
+    -webkit-clip-path: inset(55px 0 14px 0);
+            clip-path: inset(55px 0 14px 0);
+  }
+  20% {
+    -webkit-clip-path: inset(84px 0 1px 0);
+            clip-path: inset(84px 0 1px 0);
+  }
+  23.33333% {
+    -webkit-clip-path: inset(12px 0 23px 0);
+            clip-path: inset(12px 0 23px 0);
+  }
+  26.66667% {
+    -webkit-clip-path: inset(90px 0 5px 0);
+            clip-path: inset(90px 0 5px 0);
+  }
+  30% {
+    -webkit-clip-path: inset(25px 0 53px 0);
+            clip-path: inset(25px 0 53px 0);
+  }
+  33.33333% {
+    -webkit-clip-path: inset(70px 0 23px 0);
+            clip-path: inset(70px 0 23px 0);
+  }
+  36.66667% {
+    -webkit-clip-path: inset(54px 0 21px 0);
+            clip-path: inset(54px 0 21px 0);
+  }
+  40% {
+    -webkit-clip-path: inset(47px 0 4px 0);
+            clip-path: inset(47px 0 4px 0);
+  }
+  43.33333% {
+    -webkit-clip-path: inset(83px 0 6px 0);
+            clip-path: inset(83px 0 6px 0);
+  }
+  46.66667% {
+    -webkit-clip-path: inset(1px 0 8px 0);
+            clip-path: inset(1px 0 8px 0);
+  }
+  50% {
+    -webkit-clip-path: inset(80px 0 10px 0);
+            clip-path: inset(80px 0 10px 0);
+  }
+  53.33333% {
+    -webkit-clip-path: inset(3px 0 27px 0);
+            clip-path: inset(3px 0 27px 0);
+  }
+  56.66667% {
+    -webkit-clip-path: inset(12px 0 38px 0);
+            clip-path: inset(12px 0 38px 0);
+  }
+  60% {
+    -webkit-clip-path: inset(88px 0 2px 0);
+            clip-path: inset(88px 0 2px 0);
+  }
+  63.33333% {
+    -webkit-clip-path: inset(25px 0 6px 0);
+            clip-path: inset(25px 0 6px 0);
+  }
+  66.66667% {
+    -webkit-clip-path: inset(97px 0 4px 0);
+            clip-path: inset(97px 0 4px 0);
+  }
+  70% {
+    -webkit-clip-path: inset(98px 0 1px 0);
+            clip-path: inset(98px 0 1px 0);
+  }
+  73.33333% {
+    -webkit-clip-path: inset(11px 0 4px 0);
+            clip-path: inset(11px 0 4px 0);
+  }
+  76.66667% {
+    -webkit-clip-path: inset(42px 0 11px 0);
+            clip-path: inset(42px 0 11px 0);
+  }
+  80% {
+    -webkit-clip-path: inset(42px 0 41px 0);
+            clip-path: inset(42px 0 41px 0);
+  }
+  83.33333% {
+    -webkit-clip-path: inset(70px 0 13px 0);
+            clip-path: inset(70px 0 13px 0);
+  }
+  86.66667% {
+    -webkit-clip-path: inset(89px 0 10px 0);
+            clip-path: inset(89px 0 10px 0);
+  }
+  90% {
+    -webkit-clip-path: inset(12px 0 6px 0);
+            clip-path: inset(12px 0 6px 0);
+  }
+  93.33333% {
+    -webkit-clip-path: inset(20px 0 27px 0);
+            clip-path: inset(20px 0 27px 0);
+  }
+  96.66667% {
+    -webkit-clip-path: inset(35px 0 27px 0);
+            clip-path: inset(35px 0 27px 0);
+  }
+  100% {
+    -webkit-clip-path: inset(99px 0 1px 0);
+            clip-path: inset(99px 0 1px 0);
+  }
+}
+
+@keyframes noise-1 {
+  3.33333% {
+    -webkit-clip-path: inset(62px 0 14px 0);
+            clip-path: inset(62px 0 14px 0);
+  }
+  6.66667% {
+    -webkit-clip-path: inset(27px 0 19px 0);
+            clip-path: inset(27px 0 19px 0);
+  }
+  10% {
+    -webkit-clip-path: inset(62px 0 31px 0);
+            clip-path: inset(62px 0 31px 0);
+  }
+  13.33333% {
+    -webkit-clip-path: inset(95px 0 3px 0);
+            clip-path: inset(95px 0 3px 0);
+  }
+  16.66667% {
+    -webkit-clip-path: inset(55px 0 14px 0);
+            clip-path: inset(55px 0 14px 0);
+  }
+  20% {
+    -webkit-clip-path: inset(84px 0 1px 0);
+            clip-path: inset(84px 0 1px 0);
+  }
+  23.33333% {
+    -webkit-clip-path: inset(12px 0 23px 0);
+            clip-path: inset(12px 0 23px 0);
+  }
+  26.66667% {
+    -webkit-clip-path: inset(90px 0 5px 0);
+            clip-path: inset(90px 0 5px 0);
+  }
+  30% {
+    -webkit-clip-path: inset(25px 0 53px 0);
+            clip-path: inset(25px 0 53px 0);
+  }
+  33.33333% {
+    -webkit-clip-path: inset(70px 0 23px 0);
+            clip-path: inset(70px 0 23px 0);
+  }
+  36.66667% {
+    -webkit-clip-path: inset(54px 0 21px 0);
+            clip-path: inset(54px 0 21px 0);
+  }
+  40% {
+    -webkit-clip-path: inset(47px 0 4px 0);
+            clip-path: inset(47px 0 4px 0);
+  }
+  43.33333% {
+    -webkit-clip-path: inset(83px 0 6px 0);
+            clip-path: inset(83px 0 6px 0);
+  }
+  46.66667% {
+    -webkit-clip-path: inset(1px 0 8px 0);
+            clip-path: inset(1px 0 8px 0);
+  }
+  50% {
+    -webkit-clip-path: inset(80px 0 10px 0);
+            clip-path: inset(80px 0 10px 0);
+  }
+  53.33333% {
+    -webkit-clip-path: inset(3px 0 27px 0);
+            clip-path: inset(3px 0 27px 0);
+  }
+  56.66667% {
+    -webkit-clip-path: inset(12px 0 38px 0);
+            clip-path: inset(12px 0 38px 0);
+  }
+  60% {
+    -webkit-clip-path: inset(88px 0 2px 0);
+            clip-path: inset(88px 0 2px 0);
+  }
+  63.33333% {
+    -webkit-clip-path: inset(25px 0 6px 0);
+            clip-path: inset(25px 0 6px 0);
+  }
+  66.66667% {
+    -webkit-clip-path: inset(97px 0 4px 0);
+            clip-path: inset(97px 0 4px 0);
+  }
+  70% {
+    -webkit-clip-path: inset(98px 0 1px 0);
+            clip-path: inset(98px 0 1px 0);
+  }
+  73.33333% {
+    -webkit-clip-path: inset(11px 0 4px 0);
+            clip-path: inset(11px 0 4px 0);
+  }
+  76.66667% {
+    -webkit-clip-path: inset(42px 0 11px 0);
+            clip-path: inset(42px 0 11px 0);
+  }
+  80% {
+    -webkit-clip-path: inset(42px 0 41px 0);
+            clip-path: inset(42px 0 41px 0);
+  }
+  83.33333% {
+    -webkit-clip-path: inset(70px 0 13px 0);
+            clip-path: inset(70px 0 13px 0);
+  }
+  86.66667% {
+    -webkit-clip-path: inset(89px 0 10px 0);
+            clip-path: inset(89px 0 10px 0);
+  }
+  90% {
+    -webkit-clip-path: inset(12px 0 6px 0);
+            clip-path: inset(12px 0 6px 0);
+  }
+  93.33333% {
+    -webkit-clip-path: inset(20px 0 27px 0);
+            clip-path: inset(20px 0 27px 0);
+  }
+  96.66667% {
+    -webkit-clip-path: inset(35px 0 27px 0);
+            clip-path: inset(35px 0 27px 0);
+  }
+  100% {
+    -webkit-clip-path: inset(99px 0 1px 0);
+            clip-path: inset(99px 0 1px 0);
+  }
+}
+
+@-webkit-keyframes noise-2 {
+  0% {
+    -webkit-clip-path: inset(6px 0 62px 0);
+            clip-path: inset(6px 0 62px 0);
+  }
+  3.33333% {
+    -webkit-clip-path: inset(22px 0 6px 0);
+            clip-path: inset(22px 0 6px 0);
+  }
+  6.66667% {
+    -webkit-clip-path: inset(84px 0 15px 0);
+            clip-path: inset(84px 0 15px 0);
+  }
+  10% {
+    -webkit-clip-path: inset(93px 0 7px 0);
+            clip-path: inset(93px 0 7px 0);
+  }
+  13.33333% {
+    -webkit-clip-path: inset(53px 0 21px 0);
+            clip-path: inset(53px 0 21px 0);
+  }
+  16.66667% {
+    -webkit-clip-path: inset(27px 0 52px 0);
+            clip-path: inset(27px 0 52px 0);
+  }
+  20% {
+    -webkit-clip-path: inset(61px 0 40px 0);
+            clip-path: inset(61px 0 40px 0);
+  }
+  23.33333% {
+    -webkit-clip-path: inset(46px 0 40px 0);
+            clip-path: inset(46px 0 40px 0);
+  }
+  26.66667% {
+    -webkit-clip-path: inset(6px 0 94px 0);
+            clip-path: inset(6px 0 94px 0);
+  }
+  30% {
+    -webkit-clip-path: inset(48px 0 20px 0);
+            clip-path: inset(48px 0 20px 0);
+  }
+  33.33333% {
+    -webkit-clip-path: inset(18px 0 52px 0);
+            clip-path: inset(18px 0 52px 0);
+  }
+  36.66667% {
+    -webkit-clip-path: inset(24px 0 76px 0);
+            clip-path: inset(24px 0 76px 0);
+  }
+  40% {
+    -webkit-clip-path: inset(71px 0 6px 0);
+            clip-path: inset(71px 0 6px 0);
+  }
+  43.33333% {
+    -webkit-clip-path: inset(41px 0 44px 0);
+            clip-path: inset(41px 0 44px 0);
+  }
+  46.66667% {
+    -webkit-clip-path: inset(23px 0 76px 0);
+            clip-path: inset(23px 0 76px 0);
+  }
+  50% {
+    -webkit-clip-path: inset(51px 0 6px 0);
+            clip-path: inset(51px 0 6px 0);
+  }
+  53.33333% {
+    -webkit-clip-path: inset(84px 0 2px 0);
+            clip-path: inset(84px 0 2px 0);
+  }
+  56.66667% {
+    -webkit-clip-path: inset(80px 0 2px 0);
+            clip-path: inset(80px 0 2px 0);
+  }
+  60% {
+    -webkit-clip-path: inset(24px 0 59px 0);
+            clip-path: inset(24px 0 59px 0);
+  }
+  63.33333% {
+    -webkit-clip-path: inset(32px 0 60px 0);
+            clip-path: inset(32px 0 60px 0);
+  }
+  66.66667% {
+    -webkit-clip-path: inset(78px 0 3px 0);
+            clip-path: inset(78px 0 3px 0);
+  }
+  70% {
+    -webkit-clip-path: inset(30px 0 43px 0);
+            clip-path: inset(30px 0 43px 0);
+  }
+  73.33333% {
+    -webkit-clip-path: inset(32px 0 30px 0);
+            clip-path: inset(32px 0 30px 0);
+  }
+  76.66667% {
+    -webkit-clip-path: inset(16px 0 57px 0);
+            clip-path: inset(16px 0 57px 0);
+  }
+  80% {
+    -webkit-clip-path: inset(24px 0 42px 0);
+            clip-path: inset(24px 0 42px 0);
+  }
+  83.33333% {
+    -webkit-clip-path: inset(53px 0 12px 0);
+            clip-path: inset(53px 0 12px 0);
+  }
+  86.66667% {
+    -webkit-clip-path: inset(67px 0 23px 0);
+            clip-path: inset(67px 0 23px 0);
+  }
+  90% {
+    -webkit-clip-path: inset(65px 0 34px 0);
+            clip-path: inset(65px 0 34px 0);
+  }
+  93.33333% {
+    -webkit-clip-path: inset(48px 0 41px 0);
+            clip-path: inset(48px 0 41px 0);
+  }
+  96.66667% {
+    -webkit-clip-path: inset(14px 0 80px 0);
+            clip-path: inset(14px 0 80px 0);
+  }
+  100% {
+    -webkit-clip-path: inset(9px 0 51px 0);
+            clip-path: inset(9px 0 51px 0);
+  }
+}
+
+@keyframes noise-2 {
+  0% {
+    -webkit-clip-path: inset(6px 0 62px 0);
+            clip-path: inset(6px 0 62px 0);
+  }
+  3.33333% {
+    -webkit-clip-path: inset(22px 0 6px 0);
+            clip-path: inset(22px 0 6px 0);
+  }
+  6.66667% {
+    -webkit-clip-path: inset(84px 0 15px 0);
+            clip-path: inset(84px 0 15px 0);
+  }
+  10% {
+    -webkit-clip-path: inset(93px 0 7px 0);
+            clip-path: inset(93px 0 7px 0);
+  }
+  13.33333% {
+    -webkit-clip-path: inset(53px 0 21px 0);
+            clip-path: inset(53px 0 21px 0);
+  }
+  16.66667% {
+    -webkit-clip-path: inset(27px 0 52px 0);
+            clip-path: inset(27px 0 52px 0);
+  }
+  20% {
+    -webkit-clip-path: inset(61px 0 40px 0);
+            clip-path: inset(61px 0 40px 0);
+  }
+  23.33333% {
+    -webkit-clip-path: inset(46px 0 40px 0);
+            clip-path: inset(46px 0 40px 0);
+  }
+  26.66667% {
+    -webkit-clip-path: inset(6px 0 94px 0);
+            clip-path: inset(6px 0 94px 0);
+  }
+  30% {
+    -webkit-clip-path: inset(48px 0 20px 0);
+            clip-path: inset(48px 0 20px 0);
+  }
+  33.33333% {
+    -webkit-clip-path: inset(18px 0 52px 0);
+            clip-path: inset(18px 0 52px 0);
+  }
+  36.66667% {
+    -webkit-clip-path: inset(24px 0 76px 0);
+            clip-path: inset(24px 0 76px 0);
+  }
+  40% {
+    -webkit-clip-path: inset(71px 0 6px 0);
+            clip-path: inset(71px 0 6px 0);
+  }
+  43.33333% {
+    -webkit-clip-path: inset(41px 0 44px 0);
+            clip-path: inset(41px 0 44px 0);
+  }
+  46.66667% {
+    -webkit-clip-path: inset(23px 0 76px 0);
+            clip-path: inset(23px 0 76px 0);
+  }
+  50% {
+    -webkit-clip-path: inset(51px 0 6px 0);
+            clip-path: inset(51px 0 6px 0);
+  }
+  53.33333% {
+    -webkit-clip-path: inset(84px 0 2px 0);
+            clip-path: inset(84px 0 2px 0);
+  }
+  56.66667% {
+    -webkit-clip-path: inset(80px 0 2px 0);
+            clip-path: inset(80px 0 2px 0);
+  }
+  60% {
+    -webkit-clip-path: inset(24px 0 59px 0);
+            clip-path: inset(24px 0 59px 0);
+  }
+  63.33333% {
+    -webkit-clip-path: inset(32px 0 60px 0);
+            clip-path: inset(32px 0 60px 0);
+  }
+  66.66667% {
+    -webkit-clip-path: inset(78px 0 3px 0);
+            clip-path: inset(78px 0 3px 0);
+  }
+  70% {
+    -webkit-clip-path: inset(30px 0 43px 0);
+            clip-path: inset(30px 0 43px 0);
+  }
+  73.33333% {
+    -webkit-clip-path: inset(32px 0 30px 0);
+            clip-path: inset(32px 0 30px 0);
+  }
+  76.66667% {
+    -webkit-clip-path: inset(16px 0 57px 0);
+            clip-path: inset(16px 0 57px 0);
+  }
+  80% {
+    -webkit-clip-path: inset(24px 0 42px 0);
+            clip-path: inset(24px 0 42px 0);
+  }
+  83.33333% {
+    -webkit-clip-path: inset(53px 0 12px 0);
+            clip-path: inset(53px 0 12px 0);
+  }
+  86.66667% {
+    -webkit-clip-path: inset(67px 0 23px 0);
+            clip-path: inset(67px 0 23px 0);
+  }
+  90% {
+    -webkit-clip-path: inset(65px 0 34px 0);
+            clip-path: inset(65px 0 34px 0);
+  }
+  93.33333% {
+    -webkit-clip-path: inset(48px 0 41px 0);
+            clip-path: inset(48px 0 41px 0);
+  }
+  96.66667% {
+    -webkit-clip-path: inset(14px 0 80px 0);
+            clip-path: inset(14px 0 80px 0);
+  }
+  100% {
+    -webkit-clip-path: inset(9px 0 51px 0);
+            clip-path: inset(9px 0 51px 0);
+  }
+}
+
+.scanlines {
+  overflow: hidden;
+  mix-blend-mode: difference;
+}
+
+.scanlines::before {
+  content: "";
+  position: absolute;
   width: 100%;
-  /* Full width */
   height: 100%;
-  /* Full height */
-  overflow: auto;
-  /* Enable scroll if needed */
-  background-color: black;
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
+  top: 0;
+  left: 0;
+  background: repeating-linear-gradient(to bottom, transparent 0%, rgba(255, 255, 255, 0.05) 0.5%, transparent 1%);
+  -webkit-animation: fudge 7s ease-in-out alternate infinite;
+          animation: fudge 7s ease-in-out alternate infinite;
 }
 
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+@-webkit-keyframes fudge {
+  from {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  to {
+    -webkit-transform: translate(0px, 2%);
+            transform: translate(0px, 2%);
+  }
 }
 
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+@keyframes fudge {
+  from {
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  to {
+    -webkit-transform: translate(0px, 2%);
+            transform: translate(0px, 2%);
+  }
 }
 
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
+.glow {
+  text-shadow: 0 0 1000px #dfbfbf;
+  color: transparent;
+  position: absolute;
+  top: 0;
+}
+
+.subtitle {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
+  font-size: .8vw;
+  color: rgba(165, 141, 141, 0.4);
+  text-transform: uppercase;
+  letter-spacing: 1em;
+  text-align: center;
+  position: absolute;
+  left: 17%;
+  -webkit-animation: glitch-2 5s 5.02s infinite;
+          animation: glitch-2 5s 5.02s infinite;
+}
+
+@-webkit-keyframes glitch-2 {
+  1% {
+    -webkit-transform: rotateX(10deg) skewX(70deg);
+            transform: rotateX(10deg) skewX(70deg);
+  }
+  2% {
+    -webkit-transform: rotateX(0deg) skewX(0deg);
+            transform: rotateX(0deg) skewX(0deg);
+  }
+}
+
+@keyframes glitch-2 {
+  1% {
+    -webkit-transform: rotateX(10deg) skewX(70deg);
+            transform: rotateX(10deg) skewX(70deg);
+  }
+  2% {
+    -webkit-transform: rotateX(0deg) skewX(0deg);
+            transform: rotateX(0deg) skewX(0deg);
+  }
 }
 /*# sourceMappingURL=html.css.map */
