--- a/static/css/round4.css
+++ b/static/css/round4.css
@@ -17,9 +17,12 @@ body {
 h2 {
   /* grid-row: 1;
     grid-column: 1/3; */
-  padding-top: 250px;
-  padding-bottom: 50px;
+  padding: 1em;
   margin: 0;
+}
+
+label {
+  margin: 1em;
 }
 
 button {
