--- a/static/css/round4.scss
+++ b/static/css/round4.scss
@@ -16,10 +16,16 @@ body {
   h2 {
     /* grid-row: 1;
     grid-column: 1/3; */
-    padding-top:250px;
-    padding-bottom: 50px;
+    padding: 1em;
+    
     margin: 0;
   }
+
+label{
+  margin: 1em ;
+}
+
+
   button {
     font-size:23px;
     color: black;
