--- a/static/css/scavenger.css
+++ b/static/css/scavenger.css
@@ -17,7 +17,7 @@ body {
 h2 {
   /* grid-row: 1;
     grid-column: 1/3; */
-  padding-top: 250px;
+  padding-top: 0;
   padding-bottom: 50px;
   margin: 0;
 }
