--- a/templates/round5.html
+++ b/templates/round5.html
@@ -175,14 +175,14 @@
     
     <ul>
       <li class="heading">Across</li>
-      <li data-clue=1 data-dir="across" data-length=2>1. Horizontal viewport unit (2)</li>
-      <li data-clue=4 data-dir="across" data-length=3>4. A line in the grid (3)</li>
-      <li data-clue=6 data-dir="across" data-length=6>6. Removed from the DOM (6)</li>
-      <li data-clue=8 data-dir="across" data-length=3>8. child, of-type, etc (3)</li>
-      <li data-clue=9 data-dir="across" data-length=5>9. Post, pseudo element (5)</li>
-      <li data-clue=10 data-dir="across" data-length=4>10. CSS layout tech (4)</li>
-      <li data-clue=11 data-dir="across" data-length=4>11. Named layout group (4)</li>
-      <li data-clue=13 data-dir="across" data-length=5>13. Text hue (5)</li>
+      <li data-clue=1 data-dir="across" data-length=2>1. Up Down Up Down Up Down, 'B' is chilled!(2)</li> 
+      <li data-clue=4 data-dir="across" data-length=3>4. "Use THIS if you want to wake me up faster" Says PC  (3)</li>
+      <li data-clue=6 data-dir="across" data-length=6>6. If Railways killed firction, who killed it ?(6)</li>
+      <li data-clue=8 data-dir="across" data-length=3>8. "I sense heat and humidity" Says _ _ _11(3)</li>
+      <li data-clue=9 data-dir="across" data-length=5>9. Coulomb under mechanical stress, order only the Dominos! (5)</li>
+      <li data-clue=10 data-dir="across" data-length=4>10. You Get Information, processing me (4)</li>
+      <li data-clue=11 data-dir="across" data-length=4>11. From host bus to sotrage device (4)</li>
+      <li data-clue=13 data-dir="across" data-length=5>13. Relationship of angles between two waves (5)</li>
       <li data-clue=15 data-dir="across" data-length=11>15. No color (11)</li>
     </ul>
     
@@ -191,7 +191,7 @@
       <li data-clue=1 data-dir="down" data-length=2>1. Vertical viewport unit (2)</li>
       <li data-clue=2 data-dir="down" data-length=5>2. Fixed horizontal length (5)</li>
       <li data-clue=3 data-dir="down" data-length=8>3. Positioned in parent's frame (8)</li>
-      <li data-clue=5 data-dir="down" data-length=11>5. Text display direction (7,4)</li>
+      <li data-clue=5 data-dir="down" data-length=11>5. Go Back to 280TKGL, Find Many... (11)</li>
       <li data-clue=7 data-dir="down" data-length=6>7. Around the outside (6)</li>
       <li data-clue=10 data-dir="down" data-length=3>10. Space between elements (3)</li>
       <li data-clue=12 data-dir="down" data-length=5>12. Opposite of left (5)</li>
