--- a/templates/round7.html
+++ b/templates/round7.html
@@ -37,16 +37,26 @@
 
 
 
-    <h2>Clue headers</h2> 
-    <a id="riddle" style="text-decoration: none; cursor:text;" href="#">the more i am the less you see</a>
+    <h2>Clue headers</h2>
+    
+    <a id="riddle" style="text-decoration: none; cursor:text;" href="{{url_for('static',filename='Images/key7.pdf')}}" download="">the more i am the less you see</a>
 
 
     <form action="" , method="POST">
         <div class="answer">
         {{ form.hidden_tag() }}                
     </div>
-        {{form.answer}}
-        <button type="submit">Enter</button>
+   
+
+        <div style="margin-right: 13em;">
+            <label style="margin-right:-3em ;" for="answer">Note: "One True color is the answer"</label>
+            {{form.answer}}
+        </div>
+
+
+
+        <div style="text-align: center;"><button type="submit">Enter</button></div>
+        
     </form>
     <a id="homepage" href="unlock">HomePage</a>
 
