--- a/templates/round3.html
+++ b/templates/round3.html
@@ -33,7 +33,7 @@
         hour = minute * 60,
         day = hour * 24;
 
-        let deadline = "June 30, 2021 23:06:00",
+        let deadline = "July 6, 2021 11:30:00"
         countDown = new Date(deadline).getTime(),
         x = setInterval(function() {    
 
