--- a/templates/rules.html
+++ b/templates/rules.html
@@ -10,6 +10,10 @@
 <body>
     <h1>Rules And Guidelines</h1>
     
+    Your hunt will be only completed if and only if you complete all the rounds.
+    You can have 5 hints in total but you will have a time penalty for the hints.
+    Each round has 3 hints in which the time penalty is 1hr,2hr and 3 hr for each hint respectively.
+
     <div class="rules" style="color: #8d4123;">
         <ul>
             <li>Locke and key is an individual event comprising 10 rounds.</li>
@@ -18,8 +22,24 @@
             <li>It is advised to have an uninterrupted internet connection.</li>
             <li>The event will last for 24 hours and results will be published afterwards.</li>
             <li>The participation will be on a first come first serve basis.</li>
+            <li>Your hunt will be only completed if and only if you complete all the rounds.</li>
+            <li><b>Hints System</b></li>
+                <ul>
+                    <li>Participants will be given 5 hints each at the Start of the Hunt.</li>
+                    <li>Each round has 3 hints to Choose from.</li>
+                    <li>Once you open an hint, You'll only be able to open the next one in 2 hours</li>
+                    <li>Each of the 3 hints in a round has a penalty time set for them respectively</li>
+                        <ul>
+                            <li>Hint 1 ----- 1 hour</li>
+                            <li>Hint 2 ----- 2 hour</li>
+                            <li>Hint 3 ----- 3 hour</li>
+                        </ul>
+                </ul>
             
-        </u>
+            <li>The penalty time will be added when the Participant has finished the hunt.</li>
+                    <li>The winners will be decieeded by the top Participants with least time taken to complete the hunt with the added penalties</li>
+            
+        </ul>
     </div>
 
     <section class="okay-btn">
