--- a/templates/unlock.html
+++ b/templates/unlock.html
@@ -132,7 +132,7 @@
     hour = minute * 60,
     day = hour * 24;
 
-    let deadline = "July 8, 2021 18:33:00",
+    let deadline = "July 6, 2021 15:00:00",
     countDown = new Date(deadline).getTime(),
     x = setInterval(function() {    
 
@@ -150,7 +150,7 @@
           countdown = document.getElementById("countdown"),
           content = document.getElementById("content");
 
-        headline.innerText = "GOOOOO";
+        headline.innerText = "HUNT OVER";
         countdown.style.display = "none";
         content.style.display = "block";
 
