--- a/templates/round5.html
+++ b/templates/round5.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Binary Crossword</title>
+    <title>Technical Crossword</title>
     <!-- <link rel="stylesheet" href="/static/css/round5.css"> -->
     <link rel="stylesheet" href="{{url_for('static',filename='css/round5.css')}}">
 </head>
 <body>
-    <h1>Binary Crossword </h1>
+    <h1>Technical Crossword </h1>
 
     <main>
       <del></del>
@@ -129,45 +129,33 @@
       <ins class="clue9"></ins>
       <ins></ins>
       <del></del>
+      
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
+      <del></del>
     
-      <del></del>
-      <ins></ins>
-      <del></del>
-      <ins data-clue=14></ins>
-      <del></del>
-      <del></del>
-      <del></del>
-      <del></del>
-      <del></del>
-      <ins></ins>
-      <del></del>
-      <del></del>
-    
-      <del></del>
-      <ins data-clue=15></ins>
-      <ins></ins>
-      <ins class="clue10"></ins>
-      <ins></ins>
-      <ins></ins>
-      <ins data-clue=16 class="clue11"></ins>
-      <ins></ins>
-      <ins></ins>
-      <ins class="clue12"></ins>
-      <ins></ins>
-      <ins></ins>
-    
-      <del></del>
-      <del></del>
-      <del></del>
-      <ins></ins>
-      <del></del>
-      <del></del>
-      <ins></ins>
-      <del></del>
-      <del></del>
-      <del></del>
-      <del></del>
-      <del></del>
 
       
     
@@ -177,26 +165,26 @@
       <li class="heading">Across</li>
       <li data-clue=1 data-dir="across" data-length=2>1. Up Down Up Down Up Down, 'B' is chilled!(2)</li> 
       <li data-clue=4 data-dir="across" data-length=3>4. "Use THIS if you want to wake me up faster" Says PC  (3)</li>
-      <li data-clue=6 data-dir="across" data-length=6>6. If Railways killed firction, who killed it ?(6)</li>
+      <li data-clue=6 data-dir="across" data-length=6>6. If Railways killed friction, who killed it ?(6)</li>
       <li data-clue=8 data-dir="across" data-length=3>8. "I sense heat and humidity" Says _ _ _11(3)</li>
       <li data-clue=9 data-dir="across" data-length=5>9. Coulomb under mechanical stress, order only the Dominos! (5)</li>
-      <li data-clue=10 data-dir="across" data-length=4>10. You Get Information, processing me (4)</li>
+      <li data-clue=10 data-dir="across" data-length=4>10.Whos's Charles to PC?(4)</li>
       <li data-clue=11 data-dir="across" data-length=4>11. From host bus to sotrage device (4)</li>
       <li data-clue=13 data-dir="across" data-length=5>13. Relationship of angles between two waves (5)</li>
-      <li data-clue=15 data-dir="across" data-length=11>15. No color (11)</li>
+      
     </ul>
     
     <ul>
       <li class="heading">Down</li>
-      <li data-clue=1 data-dir="down" data-length=2>1. Vertical viewport unit (2)</li>
-      <li data-clue=2 data-dir="down" data-length=5>2. Fixed horizontal length (5)</li>
-      <li data-clue=3 data-dir="down" data-length=8>3. Positioned in parent's frame (8)</li>
+      <li data-clue=1 data-dir="down" data-length=2>1. Tune now, Its morning!! (2)</li>
+      <li data-clue=2 data-dir="down" data-length=5>2. When it's kept here, the files come out faaaasstt!! (5)</li>
+      <li data-clue=3 data-dir="down" data-length=8>3. Big B. Roy of in Great Britain cracked this  (8)</li>
       <li data-clue=5 data-dir="down" data-length=11>5. Go Back to 280TKGL, Find Many... (11)</li>
-      <li data-clue=7 data-dir="down" data-length=6>7. Around the outside (6)</li>
-      <li data-clue=10 data-dir="down" data-length=3>10. Space between elements (3)</li>
-      <li data-clue=12 data-dir="down" data-length=5>12. Opposite of left (5)</li>
-      <li data-clue=14 data-dir="down" data-length=3>14. Alternative angle unit (3)</li>
-      <li data-clue=16 data-dir="down" data-length=2>16. Pica unit (2)</li>
+      <li data-clue=7 data-dir="down" data-length=6>7. I was with Salyut, K? POSITIVE Vibes only! (6)</li>
+      <li data-clue=10 data-dir="down" data-length=3>10. www.youknowtheanswer.com  (3)</li>
+      <li data-clue=12 data-dir="down" data-length=5>12. "He can ONLY be HIGH if ALL those who went inside are HIGH" says the Cop.(3)</li>
+      
+      
     
     </ul>
     
