--- a/static/css/round5-answer.css
+++ b/static/css/round5-answer.css
@@ -4,7 +4,7 @@ body {
 
 .key-answers {
   text-align: center;
-  margin-top: 20em;
+  margin-top: 0em;
   word-spacing: 1em;
   margin-bottom: 5em;
 }
@@ -15,6 +15,25 @@ body {
   font-size: xx-large;
   border-radius: .5em;
   padding: .2em;
+}
+
+#goback {
+  font-size: normal;
+  margin-top: -3em;
+}
+
+#goback a {
+  color: black;
+  font-family: Cinzel;
+  border-radius: .5em;
+  text-decoration: none;
+  padding: .13em;
+  border: 3px solid #535353;
+}
+
+#goback a:hover {
+  background-color: #535353;
+  color: white;
 }
 
 #a1 {
