--- a/templates/start-page.html
+++ b/templates/start-page.html
@@ -54,7 +54,7 @@
         hour = minute * 60,
         day = hour * 24;
 
-        let deadline = "July 6, 2021 10:30:00",
+        let deadline = "July 8, 2021 16:40:00",
         countDown = new Date(deadline).getTime(),
         x = setInterval(function() {    
 
@@ -140,7 +140,7 @@ typewriter();
             <li>
                 <a href="rules.html">Rules & Guidlines</a>
                 <a href="#" style="color: red; padding: 1em;">|</a>
-                <a href="#">Contacts</a>
+                <a href="/contacts">Contacts</a>
             </li>
         </div>
         <div class="contacts">
@@ -160,7 +160,7 @@ typewriter();
         var with_x = document.getElementById("withAdmin");
         var start_btn = document.getElementById("start-btn");
 
-        let deadline = "July 6, 2021 10:30:00";
+        let deadline = "July 8, 2021 17:40:00";
         var countDown = new Date(deadline).getTime();
         var now = new Date().getTime();
         
