--- a/templates/unlock.html
+++ b/templates/unlock.html
@@ -41,7 +41,7 @@
                 </ul>
 
                 <ul class="secondary-nav">
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="/contacts">Contact</a></li>
                     <li class="go-premium-cta"><a href="{{ url_for('logout') }}">Log Out</a></li>
                 </ul>
             </nav>
@@ -132,7 +132,7 @@
     hour = minute * 60,
     day = hour * 24;
 
-    let deadline = "July 6, 2021 21:00:00",
+    let deadline = "July 9, 2021 17:40:00",
     countDown = new Date(deadline).getTime(),
     x = setInterval(function() {    
 
