--- a/static/css/login.css
+++ b/static/css/login.css
@@ -28,12 +28,12 @@ body {
 
 .login .username {
   padding-bottom: 2em;
-  padding-right: 1em;
+  margin-left: -1em;
   font-size: large;
 }
 
 .login .username input {
-  margin-left: 0em;
+  margin-left: 3em;
   -webkit-box-sizing: 2em;
           box-sizing: 2em;
   padding: .3em;
@@ -41,11 +41,16 @@ body {
   border-radius: .35em;
 }
 
+.login .username label {
+  margin-right: 0em;
+}
+
 .login .pass {
   padding-bottom: 1em;
 }
 
 .login .pass input {
+  margin-left: 5em;
   padding: .3em;
   padding-right: 2em;
   border-radius: .35em;
