--- a/templates/ammu_landing-page.html
+++ b/templates/ammu_landing-page.html
@@ -113,7 +113,7 @@
         hour = minute * 60,
         day = hour * 24;
 
-        let deadline = "July 6, 2021 10:30:00",
+        let deadline = "July 8, 2021 17:40:00",
         countDown = new Date(deadline).getTime(),
         x = setInterval(function() {    
 
@@ -145,7 +145,7 @@
 
     <section class="user-data" id="user-data">
         <a class="login" href="login.html">LogIn</a>
-        <a class="sign-up" href="register.html">Sign Up</a>
+        <a class="sign-up" href="https://www.yepdesk.com/define-lock-and-key" target="_blank">Sign Up</a>
     </section>
 
     <section class="footer">
@@ -154,7 +154,7 @@
         </div>
         
         <div class="contacts">
-            <a href="#">Contacts</a>
+            <a href="/contacts">Contacts</a>
         </div>    
     </section>
 
