--- a/templates/round5.html
+++ b/templates/round5.html
@@ -168,7 +168,7 @@
       <li data-clue=6 data-dir="across" data-length=6>6. If Railways killed friction, who killed it ?(6)</li>
       <li data-clue=8 data-dir="across" data-length=3>8. "I sense heat and humidity" Says _ _ _11(3)</li>
       <li data-clue=9 data-dir="across" data-length=5>9. Coulomb under mechanical stress, order only the Dominos! (5)</li>
-      <li data-clue=10 data-dir="across" data-length=4>10.Whos's Charles to PC?(4)</li>
+      <li data-clue=10 data-dir="across" data-length=4>10. Yhou get information processing me (4)</li>
       <li data-clue=11 data-dir="across" data-length=4>11. From host bus to sotrage device (4)</li>
       <li data-clue=13 data-dir="across" data-length=5>13. Relationship of angles between two waves (5)</li>
       
@@ -181,7 +181,7 @@
       <li data-clue=3 data-dir="down" data-length=8>3. Big B. Roy of in Great Britain cracked this  (8)</li>
       <li data-clue=5 data-dir="down" data-length=11>5. Go Back to 280TKGL, Find Many... (11)</li>
       <li data-clue=7 data-dir="down" data-length=6>7. I was with Salyut, K? POSITIVE Vibes only! (6)</li>
-      <li data-clue=10 data-dir="down" data-length=3>10. www.youknowtheanswer.com  (3)</li>
+      <li data-clue=10 data-dir="down" data-length=3>10.Whos's Charles to PC?(4) (3)</li>
       <li data-clue=12 data-dir="down" data-length=5>12. "He can ONLY be HIGH if ALL those who went inside are HIGH" says the Cop.(3)</li>
       
       
