--- a/templates/rules.html
+++ b/templates/rules.html
@@ -16,7 +16,7 @@
 
     <div class="rules" style="color: #8d4123;">
         <ul>
-            <li>Locke and key is an individual event comprising 10 rounds.</li>
+            <li>Lock and key is an individual event comprising 10 rounds.</li>
             <li>The platform will be our own website</li>
             <li>Contestants are requested to use a PC or Laptop</li>
             <li>It is advised to have an uninterrupted internet connection.</li>
