--- a/templates/start-page.html
+++ b/templates/start-page.html
@@ -138,7 +138,7 @@ typewriter();
     <section class="footer">
         <div class="rule">
             <li>
-                <a href="rules.html">Rules & Guidlines</a>
+                <a href="rules.html">Rules & Guidelines</a>
                 <a href="#" style="color: red; padding: 1em;">|</a>
                 <a href="/contacts">Contacts</a>
             </li>
