--- a/templates/login.html
+++ b/templates/login.html
@@ -68,7 +68,7 @@
     </section>
     <section class="footer">
         <div class="rule">
-            <a href="rules.html">Rules & Guidlines</a>
+            <a href="rules.html">Rules & Guidelines</a>
         </div>
         <div class="contacts">
             <a href="/contacts">Contacts</a>
