added logos, correctedd rounds, intro

--- a/templates/round3.html
+++ b/templates/round3.html
@@ -67,6 +67,12 @@
       }, 0)
   }());
       </script>
+      <section class="cmid" style="text-align: center;">
+        <div class="mid">
+            
+          <a class="define" href="http://rsetiedc.in/define" ><img style="width: 8.5em; position: fixed; left: 0; bottom: 1em;" src="{{ url_for('static',filename='Images/Logo.png') }}" alt="Define"></a>
+        </div>
+        </section>
 
       
     
