--- a/templates/rules.html
+++ b/templates/rules.html
@@ -10,9 +10,6 @@
 <body>
     <h1>Rules And Guidelines</h1>
     
-    Your hunt will be only completed if and only if you complete all the rounds.
-    You can have 5 hints in total but you will have a time penalty for the hints.
-    Each round has 3 hints in which the time penalty is 1hr,2hr and 3 hr for each hint respectively.
 
     <div class="rules" style="color: #8d4123;">
         <ul>
@@ -52,6 +49,14 @@
           window.history.back();
         }
         </script>
+
+
+<section class="cmid" style="text-align: center;">
+    <div class="mid">
+        
+      <a class="define" href="http://rsetiedc.in/define" ><img style="width: 8.5em; position: fixed; left: 0; bottom: 1em;" src="{{ url_for('static',filename='Images/Logo.png') }}" alt="Define"></a>
+    </div>
+    </section>
 
 </body>
 </html>
