--- a/static/css/unlcok.scss
+++ b/static/css/unlcok.scss
@@ -200,29 +200,35 @@ nav {
     }
 }
 
-.key-answers{
+.key-answers {
     text-align: center;
     word-spacing: 1em;
     margin-top: -15em;
     margin-bottom: 2em;
-    input{
-        width: 30px;
-        border-radius: .5em;
-        border: brown;
-    }
+    
 }
 
-.unlock-btn{
+input{
     text-align: center;
-    
-    input{
-        font-family: Cinzel;
+    width: 30px;
+    border-radius: .5em;
+    border-color: gold;
+    border-width: .3em;
+}
+.unlock-btn{
+    margin-top: 1em;
+    text-align: center;
+    font-family: Cinzel;
         font-size: larger;
         border-radius: .5em;
-
-
-    }
-
+        &:hover{
+            color: whitesmoke;
+            border-radius: 1em;
+            border-color: blue;
+            background-color: red;
+        }
+    
+  
     
 }
 
@@ -331,4 +337,86 @@ nav {
 .timer li span {
     display: block;
     font-size: 4.5rem;
+}
+
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1000; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  #ten-countdown {
+    /* text-align: center; */
+    // border: 5px solid #004853;
+    display:inline;
+    padding: 5px;
+    color: #004853;
+    font-family: Verdana, sans-serif, Arial;
+    font-size: 40px;
+    font-weight: bold;
+    text-decoration: none;
+     
+}
+
+.hint-btn{
+    
+    display: grid;
+    position: fixed;
+    bottom: 3em;
+    margin: 1em;
+
+    #myBtn{
+        width: 2.5em;
+        position: fixed;
+        right: 0;
+        padding-right: 1em;
+       
+        &:hover{
+            width: 2.8em;
+            cursor: pointer;
+        }
+    }
+    
+}
+
+.hints{
+    li{
+    &:hover{
+        font-weight: bold;
+        color: black;
+    }
+}
 }
