--- a/templates/round4.html
+++ b/templates/round4.html
@@ -38,7 +38,7 @@
    
 
 
-    <a style="margin-top: -2em;" href="https://www.gulfcareers.com/about-us/">https://www.gulfcareers.com/about-us/</a>
+    <a style="margin-top: -2em;" href="https://www.gulfcareers.com/about-us/" target="_blank">https://www.gulfcareers.com/about-us/</a>
     <form action="" , method="POST" style="display: grid;">
         <div class="answer">
         {{ form.hidden_tag() }}                
@@ -236,7 +236,7 @@
     
     
         if(checkTimerNeeded()){
-                    countdown( "ten-countdown", 120000-new Date().getTime()+Number("{{g.user.time1}}"),hint1, hint2, hint3 );
+                    countdown( "ten-countdown", 7200000-new Date().getTime()+Number("{{g.user.time1}}"),hint1, hint2, hint3 );
                 }
               
                 
@@ -250,7 +250,7 @@
             if(hint_count>0 ) {
                
                 
-                    countdown( "ten-countdown", 120000 ,hintid1, hintid2, hintid3 );
+                    countdown( "ten-countdown", 7200000 ,hintid1, hintid2, hintid3 );
                     
                     let getTime = new Date().getTime();
                     hintID.innerHTML = mainHint;
@@ -303,7 +303,7 @@
             var c_time = new Date().getTime();
             if(lastRecivedTime!=null){ 
                 var elaspedTime = c_time-lastRecivedTime;
-                if(elaspedTime < 120000){
+                if(elaspedTime < 7200000){
                     return true;
                 }
             }
@@ -316,6 +316,12 @@
     
        
         </script>
+        <section class="cmid" style="text-align: center;">
+            <div class="mid">
+                
+              <a class="define" href="http://rsetiedc.in/define" ><img style="width: 8.5em; position: fixed; left: 0; bottom: 1em;" src="{{ url_for('static',filename='Images/Logo.png') }}" alt="Define"></a>
+            </div>
+            </section>
         
     
 </body>
