--- a/templates/round5.html
+++ b/templates/round5.html
@@ -11,6 +11,10 @@
 <body>
     <h1>Technical Crossword </h1>
 
+    <p>Click on a clue or press TAB. Type your answers.</p>
+    <p> When Done  <a href="{{url_for('round5')}}" target="_blank" rel="noreferrer noopener">Go here</a> (Dont Close This Page! )</p>
+    </div>
+
     <main>
       <del></del>
       <ins data-clue=1></ins>
@@ -181,16 +185,14 @@
       <li data-clue=3 data-dir="down" data-length=8>3. Big B. Roy of in Great Britain cracked this  (8)</li>
       <li data-clue=5 data-dir="down" data-length=11>5. Go Back to 280TKGL, Find Many... (11)</li>
       <li data-clue=7 data-dir="down" data-length=6>7. I was with Salyut, K? POSITIVE Vibes only! (6)</li>
-      <li data-clue=10 data-dir="down" data-length=3>10.Whos's Charles to PC?(4) (3)</li>
+      <li data-clue=10 data-dir="down" data-length=3>10. What did the PC call Charles?! (4) (3)</li>
       <li data-clue=12 data-dir="down" data-length=5>12. "He can ONLY be HIGH if ALL those who went inside are HIGH" says the Cop.(3)</li>
       
       
     
     </ul>
     
-    <p>Click on a clue or press TAB. Type your answers.</p>
-    <p> When Done  <a href="{{url_for('round5')}}" target="_blank" rel="noreferrer noopener">Go here</a> (Dont Close This Page! )</p>
-    </div>
+
 
     <script>
         let index = Array.from(document.querySelector('main').children);
