--- a/templates/unlock.html
+++ b/templates/unlock.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="{{url_for('static',filename='css/unlcok.css')}}">
 </head>
 <body>
+
+    
+  
+    
     <div class="navbar">
         <div class="container">
             <div class="logo-div">
@@ -196,6 +200,75 @@
      
 
   </script>
+
+<div id="myModal" class="modal">
+    <!-- Modal content -->
+    
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h1 style="text-align: center;">Welcome to the HUNT!</h2>
+
+        <ul class="hints">
+            <li>Here are some points to help you get throug.....</li> 
+            <li></li> 
+            <li></li> 
+            <li></li> 
+            <li></li> 
+            <li></li> 
+            
+        </ul>
+        <p>↓ Down here is the number of hints left for you ↓</p> 
+        <li style="display:flex;">
+            <h3>Hints Left :  </h3>
+            <h3 id="hints_left">{{g.user.hints}}</h3>
+        </li>
+        <div id="ten-countdown">00:00  ← This is your cooldowntimmer</div> 
+        
+    </div> 
+</div>
+
+  <!-- <button id="myBtn" >Hints </button> -->
+<div class="hint-btn">
+    <img id="myBtn"   src="{{url_for('static',filename='Images/hint.png')}}" alt="hints"></div>
+    
+    <!-- The Modal -->
+
+    <script>
+        
+    // Get the modal
+    var modal = document.getElementById("myModal");
+    
+    // Get the button that opens the modal
+    var btn = document.getElementById("myBtn");
+    
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+    
+    // When the user clicks the button, open the modal 
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+    
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+    
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+
+    </script>
+
+<section class="cmid" style="text-align: center;">
+    <div class="mid">
+        
+      <a class="define" href="http://rsetiedc.in/define" ><img style="width: 8.5em; position: fixed; left: 0; bottom: 1em;" src="{{ url_for('static',filename='Images/Logo.png') }}" alt="Define"></a>
+    </div>
+    </section>
     
 </body>
 </html>
