added logos, correctedd rounds, intro

--- a/templates/ammu_landing-page.html
+++ b/templates/ammu_landing-page.html
@@ -131,7 +131,7 @@
               countdown = document.getElementById("countdown"),
               content = document.getElementById("content");
 
-            headline.innerText = "GOOOOO";
+            headline.innerText = "The Hunt has STARTED";
             countdown.style.display = "none";
             content.style.display = "block";
 
