--- a/templates/unlock.html
+++ b/templates/unlock.html
@@ -206,23 +206,25 @@
     
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h1 style="text-align: center;">Welcome to the HUNT!</h2>
+        <h1 style="text-align: center;">Welcome to the HUNT!</h1>
 
         <ul class="hints">
-            <li>Here are some points to help you get throug.....</li> 
-            <li></li> 
-            <li></li> 
-            <li></li> 
-            <li></li> 
-            <li></li> 
+            <h3>Here are some points to keep in mind..... </h3>   
+            <ul>
+            <li>The duration of the HUNT is 24 hours.</li> 
+            <li>Watch out for hidden bonuses and easter eggs during the HUNT.</li> 
+            <li>Contact Us, if you face any difficulty.</li> 
+            <li>The HINTS are present in the right-bottom of the screen, indicated as a light bulb.</li> 
+            <li>Please be familiarized with the HINTs System before using them, You can find all the information in <a href="rules.html"> Rules&Guidelines.</a></li> 
+        </ul> 
             
         </ul>
         <p>↓ Down here is the number of hints left for you ↓</p> 
         <li style="display:flex;">
-            <h3>Hints Left :  </h3>
+            <h3>Hints Left :  </h3> 
             <h3 id="hints_left">{{g.user.hints}}</h3>
         </li>
-        <div id="ten-countdown">00:00  ← This is your cooldowntimmer</div> 
+        <div id="ten-countdown">00:00:00  ← This here is your cooldown timer</div> 
         
     </div> 
 </div>
