--- a/static/css/html.scss
+++ b/static/css/html.scss
@@ -1,137 +1,245 @@
+/*--------------------
+Body
+--------------------*/
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
-  background: black;
-  font-family: "Oswald", sans-serif;
-  font-style: italic;
+  min-height: 450px;
+  height: 100vh;
+  margin: 0;  
+  background: radial-gradient(ellipse farthest-corner at center top, #f39264 0%, #f2606f 100%);
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;  
 }
 
-.container {
+
+/*--------------------
+Leaderboard
+--------------------*/
+.leaderboard {
   position: absolute;
-  transform: translate(-50%, -50%);
-  top: 40%;
+  top: 50%;
   left: 50%;
-}
+  transform: translate(-50%, -50%);
+  width: 285px;
+  height: 308px;
+  background: linear-gradient(to bottom, #3a404d, #181c26);
+  border-radius: 10px;
+  box-shadow: 0 7px 30px rgba(62, 9, 11, .3);
 
-.glitch {
-  color: rgb(223, 191, 191);
-  position: relative;
-  font-size: 9vw;
-  // margin: 70px 200px;
-  animation: glitch 5s 5s infinite;
-}
+  h1 {
+    font-size: 18px;
+    color: #e1e1e1;
+    padding: 12px 13px 18px;
 
-.glitch::before {
-  content: attr(data-text);
-  position: absolute;
-  left: -2px;
-  text-shadow: -5px 0 magenta;
-  background: black;
-  overflow: hidden;
-  top: 0;
-  animation: noise-1 3s linear infinite alternate-reverse, glitch 5s 5.05s infinite;
-}
-
-.glitch::after {
-  content: attr(data-text);
-  position: absolute;
-  left: 2px;
-  text-shadow: -5px 0 lightgreen;
-  background: black;
-  overflow: hidden;
-  top: 0;
-  animation: noise-2 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
-}
-
-@keyframes glitch {
-  1%{
-    transform: rotateX(10deg) skewX(90deg);
-  }
-  2%{
-    transform: rotateX(0deg) skewX(0deg);
-  }
-}
-
-@keyframes noise-1 {
-  $steps: 30;
-  @for $i from 1 through $steps {
-    #{percentage($i*(1/$steps))} {
-      $top: random(100);
-      $bottom: random(101 - $top);
-      clip-path: inset(#{$top}px 0 #{$bottom}px 0);
+    & svg {
+      width: 25px;
+      height: 26px;
+      position: relative;
+      top: 3px;
+      margin-right: 6px;
+      vertical-align: baseline;
     }
-  }
-}
 
-@keyframes noise-2 {
-  $steps: 30;
-  @for $i from 0 through $steps {
-    #{percentage($i*(1/$steps))} {
-      $top: random(100);
-      $bottom: random(101 - $top);
-      clip-path: inset(#{$top}px 0 #{$bottom}px 0);
+  }
+
+  ol {
+    counter-reset: leaderboard;
+
+    li {
+      position: relative;
+      z-index: 1;
+      font-size: 14px;
+      counter-increment: leaderboard;
+      padding: 18px 10px 18px 50px;
+      cursor: pointer;
+      backface-visibility: hidden;
+      transform: translateZ(0) scale(1.0, 1.0);
+
+
+      &::before {
+        content: counter(leaderboard);
+        position: absolute;
+        z-index: 2;
+        top: 15px;
+        left: 15px;
+        width: 20px;
+        height: 20px;
+        line-height: 20px;
+        color: #c24448;
+        background: #fff;
+        border-radius: 20px;
+        text-align: center;
+      }
+
+      mark {
+        position: absolute;
+        z-index: 2;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        padding: 18px 10px 18px 50px;
+        margin: 0;
+        background: none;
+        color: #fff;
+
+        &::before, &::after {
+          content: '';
+          position: absolute;
+          z-index: 1;
+          bottom: -11px;
+          left: -9px;
+          border-top: 10px solid #c24448;
+          border-left: 10px solid transparent;
+          transition: all .1s ease-in-out;
+          opacity: 0;
+        }
+
+        &::after {
+          left: auto;
+          right: -9px;
+          border-left: none;
+          border-right: 10px solid transparent;
+        }
+      }
+
+      small {
+        position: relative;
+        z-index: 2;
+        display: block;
+        text-align: right;
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #fa6855;
+        box-shadow: 0 3px 0 rgba(0, 0, 0, .08);
+        // transform: scaleX(1.06) scaleY(1.03);
+        transition: all .3s ease-in-out;
+        opacity: 0;
+      }
+
+      &:nth-child(1) {
+        background: #fa6855;
+        &::after {
+          background: #fa6855;
+        }
+      }
+
+      &:nth-child(2) {
+        background: #e0574f;
+        &::after {
+          background: #e0574f;
+          box-shadow: 0 2px 0 rgba(0, 0, 0, .08);
+        }
+
+        & mark {
+          &::before, &::after {
+            border-top: 6px solid #ba4741;
+            bottom: -7px;
+          }
+        }
+      }
+
+      &:nth-child(3) {
+        background: #d7514d;
+        &::after {
+          background: #d7514d;
+          box-shadow: 0 1px 0 rgba(0, 0, 0, .11);
+        }
+
+        & mark {
+          &::before, &::after {
+            border-top: 2px solid #b0433f;
+            bottom: -3px;
+          }
+        }
+      }
+
+      &:nth-child(4) {
+        background: #cd4b4b;
+        &::after {
+          background: #cd4b4b;
+          box-shadow: 0 -1px 0 rgba(0, 0, 0, .15);
+        }
+
+        & mark {
+          &::before, &::after {
+            top: -7px;
+            bottom: auto;
+            border-top: none;
+            border-bottom: 6px solid #a63d3d;;
+          }
+        }
+      }
+
+      &:nth-child(5) {
+        background: #c24448;
+        border-radius: 0 0 10px 10px;
+        &::after {
+          background: #c24448;
+          box-shadow: 0 -2.5px 0 rgba(0, 0, 0, .12);
+          border-radius: 0 0 10px 10px;
+        }
+
+        & mark {
+          &::before, &::after {
+            top: -9px;
+            bottom: auto;
+            border-top: none;
+            border-bottom: 8px solid #993639;
+          }
+        }
+      }
+
     }
+
+    // hover
+    li:hover {
+      z-index: 2;
+      overflow: visible;
+
+      &::after {
+        opacity: 1;
+        transform: scaleX(1.06) scaleY(1.03);
+      }
+
+      & mark {
+        &::before, &::after {
+          opacity: 1;
+          transition: all .35s ease-in-out;
+        }
+      }
+    }
+
   }
 }
 
-.scanlines {
-  overflow: hidden;
-  mix-blend-mode: difference;
-}
+// * {
+//   //display: none;
+// }
 
-.scanlines::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
+.the-most {
+  position: fixed;
+  z-index: 1;
+  bottom: 0;
   left: 0;
-
-  background: repeating-linear-gradient(
-    to bottom,
-    transparent 0%,
-    rgba(255, 255, 255, 0.05) .5%,
-    transparent 1%
-  );
-
-  animation: fudge 7s ease-in-out alternate infinite;
-}
-
-
-@keyframes fudge {
-  from {
-    transform: translate(0px, 0px);
-  }
-  to {
-    transform: translate(0px, 2%);
+  width: 50vw;
+  max-width: 200px;
+  padding: 10px;
+  
+  img {
+    max-width: 100%;
   }
 }
-
-.glow {
-  @extend .glitch;
-  text-shadow: 0 0 1000px rgb(223, 191, 191);
-  color: transparent;
-  position: absolute;
-  top: 0;
-}
-
-.subtitle {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 100;
-  font-size: .8vw;
-  color: rgba(165, 141, 141, .4);
-  text-transform: uppercase;
-  letter-spacing: 1em;
-  text-align: center;
-  position: absolute;
-  left: 17%;
-  animation: glitch-2 5s 5.02s infinite;
-}
-
-@keyframes glitch-2 {
-  1%{
-    transform: rotateX(10deg) skewX(70deg);
-  }
-  2%{
-    transform: rotateX(0deg) skewX(0deg);
-  }
-}
-
