added logos, correctedd rounds, intro

--- a/templates/unlock.html
+++ b/templates/unlock.html
@@ -212,6 +212,7 @@
             <h3>Here are some points to keep in mind..... </h3>   
             <ul>
             <li>The duration of the HUNT is 24 hours.</li> 
+            <li>Total time taken for all Participants is considered from start of the HUNT(5:40 pm) to the time of completion with the added penalties.</li>
             <li>Watch out for hidden bonuses and easter eggs during the HUNT.</li> 
             <li>Contact Us, if you face any difficulty.</li> 
             <li>The HINTS are present in the right-bottom of the screen, indicated as a light bulb.</li> 
