--- a/templates/rules.html
+++ b/templates/rules.html
@@ -31,11 +31,11 @@
                             <li>Hint 2 ----- 2 hour</li>
                             <li>Hint 3 ----- 3 hour</li>
                         </ul>
+                        <li>The penalty time will be added when the Participant has finished the hunt.</li>
                 </ul>
-            
-            <li>The penalty time will be added when the Participant has finished the hunt.</li>
-                    <li>The winners will be decided by the top Participants with least time taken to complete the hunt with the added penalties</li>
-            
+            <li>The winners will be decided by the top Participants with least time taken to complete the hunt with the added penalties</li>
+            <li>Total time taken for all Participants is considered from start of the HUNT(5:40 pm) to the time of completion with the added penalties. </li>
+            <li>The starting time of each Participant is common, July 8th 5:40pm. </li>
         </ul>
     </div>
 
